--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
+html,
+body {
+  font-family: 'Amazon Ember', 'Helvetica', 'sans-serif';
+  margin: 0;
+}
+a {
+  color: #ff9900;
+}
+h1 {
+  font-weight: 300;
+}
+hr {
+  height: 1px;
+  background: lightgray;
+  border: none;
+}
+.app {
+  width: 100%;
+}
+.app-header {
+  color: white;
+  text-align: center;
+  background: linear-gradient(30deg, #f90 55%, #ffc300);
+  width: 100%;
+  margin: 0 0 1em 0;
+  padding: 3em 0 3em 0;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
+}
+.app-body {
+  width: 400px;
+  margin: 0 auto;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.app-body button {
+  background-color: #ff9900;
+  font-size: 14px;
   color: white;
+  text-transform: uppercase;
+  padding: 1em;
+  border: none;
 }
-
-.App-link {
-  color: #61dafb;
+.app-body button:hover {
+  opacity: 0.8;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.root {
+  height: 100px;
 }
